--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBPnJ8dOnqQkDa9xzFdSkJI2BTVHFcEyr0"/>
+            android:value="MiApiKey"/>
         <activity
             android:name=".ConsultaActivity"
             android:exported="true" />
